bug fixes, app runs now

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-
+<head>
+    <base href="/">
+</head>
 <mat-toolbar class="header" color="primary">
   Project Name!!1!
   <div class="filler"></div>
